# rag_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.py  llm_client.py  pyproject.toml  rag.py  requirements.txt  test_openai.py  test_questions.py
.github/workflows/: ci.yml
experiments/01_rag_feq/: README.md
experiments/02_rag_feq/: README.md
experiments/03_inference_speed/: README.md
experiments/04_rag_ops/: README.md
scripts/: bench_api.py  log_dashboard.py  run.bat  setup.bat
tests/: conftest.py  test_api.py  test_api_internals.py  test_auth.py  test_cost.py  test_e2e_openai.py  test_llm_client.py  test_log_dashboard.py  test_openai_manual.py  test_questions_manual.py  test_rag.py  test_smoke.py
